--- a/res/layout/activity_browser.xml
+++ b/res/layout/activity_browser.xml
@@ -109,32 +109,31 @@
         </br.com.carlosrafaelgn.fplay.ui.BgListView>
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/panelLoading"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:baselineAligned="false"
-        android:orientation="vertical"
+        android:layout_gravity="center"
         android:visibility="gone" >
 
         <ProgressBar
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
+            android:id="@+id/barLoading"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_centerHorizontal="true"
             android:indeterminate="true" />
 
         <TextView
             android:id="@+id/lblLoading"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_below="@+id/barLoading"
+            android:layout_centerHorizontal="true"
             android:gravity="center"
             android:padding="2dp"
             android:singleLine="true"
             android:text="@string/loading" />
-    </LinearLayout>
+    </RelativeLayout>
 
 </merge>
