Tried to fix a null pointer exception and added icons in the settings

--- a/res/layout/activity_browser.xml
+++ b/res/layout/activity_browser.xml
@@ -118,10 +118,11 @@
 
         <ProgressBar
             android:id="@+id/barLoading"
-            style="?android:attr/progressBarStyleLarge"
+            style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_alignLeft="@+id/lblLoading"
+            android:layout_alignRight="@+id/lblLoading"
             android:indeterminate="true" />
 
         <TextView
