--- a/res/layout-sw600dp/activity_effects.xml
+++ b/res/layout-sw600dp/activity_effects.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:baselineAligned="false"
+    android:orientation="vertical"
     tools:context=".ActivityHost" >
 
     <RelativeLayout
         android:id="@+id/panelTop"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" >
+        android:layout_height="wrap_content" >
 
         <br.com.carlosrafaelgn.fplay.ui.BgButton
             android:id="@+id/btnGoBack"
@@ -18,11 +19,11 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:contentDescription="@string/go_back"
-            android:nextFocusDown="@+id/barBass"
-            android:nextFocusForward="@+id/chkEnable"
-            android:nextFocusLeft="@+id/btnChangeEffect"
-            android:nextFocusRight="@+id/chkEnable"
-            android:nextFocusUp="@+id/btnChangeEffect" >
+            android:nextFocusDown="@+id/chkEqualizer"
+            android:nextFocusForward="@+id/btnMenu"
+            android:nextFocusLeft="@+id/chkReverb"
+            android:nextFocusRight="@+id/btnMenu"
+            android:nextFocusUp="@+id/chkEqualizer" >
 
             <requestFocus />
         </br.com.carlosrafaelgn.fplay.ui.BgButton>
@@ -35,48 +36,44 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="8dp"
             android:contentDescription="@string/menu"
-            android:nextFocusDown="@+id/barBass"
-            android:nextFocusForward="@+id/barBass"
-            android:nextFocusLeft="@+id/chkEnable"
-            android:nextFocusRight="@+id/barBass"
-            android:nextFocusUp="@+id/btnChangeEffect" />
+            android:nextFocusDown="@+id/chkBass"
+            android:nextFocusForward="@+id/chkEqualizer"
+            android:nextFocusLeft="@+id/btnGoBack"
+            android:nextFocusRight="@+id/chkEqualizer"
+            android:nextFocusUp="@+id/chkReverb" />
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/panelControls"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/panelTop"
         android:baselineAligned="false"
         android:orientation="horizontal"
         android:weightSum="5" >
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/panelEqualizer"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="32dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="32dp"
-            android:layout_weight="3" >
+            android:layout_weight="3"
+            android:baselineAligned="false"
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/chkEqualizer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
                 android:layout_marginBottom="16dp"
-                android:nextFocusDown="@+id/btnGoBack"
-                android:nextFocusForward="@+id/btnGoBack"
-                android:nextFocusLeft="@+id/barBass"
-                android:nextFocusRight="@+id/btnGoBack"
-                android:nextFocusUp="@+id/barBass"
+                android:nextFocusLeft="@+id/btnMenu"
+                android:nextFocusUp="@+id/btnGoBack"
                 android:text="@string/equalizer" />
-        </RelativeLayout>
+        </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/panelSecondary"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -84,45 +81,42 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="32dp"
             android:layout_marginTop="32dp"
-            android:layout_weight="2" >
+            android:layout_weight="2"
+            android:baselineAligned="false"
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/chkBass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
                 android:layout_marginBottom="16dp"
-                android:nextFocusDown="@+id/btnGoBack"
-                android:nextFocusForward="@+id/btnGoBack"
-                android:nextFocusLeft="@+id/barBass"
-                android:nextFocusRight="@+id/btnGoBack"
-                android:nextFocusUp="@+id/barBass"
+                android:nextFocusDown="@+id/barBass"
+                android:nextFocusForward="@+id/barBass"
+                android:nextFocusRight="@+id/barBass"
+                android:nextFocusUp="@+id/btnMenu"
                 android:text="@string/bass_boost" />
 
             <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
                 android:id="@+id/barBass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/chkBass"
                 android:layout_marginBottom="32dp"
-                android:nextFocusDown="@+id/btnChangeEffect"
-                android:nextFocusForward="@+id/btnChangeEffect"
-                android:nextFocusLeft="@+id/chkEnable"
-                android:nextFocusRight="@+id/btnChangeEffect"
-                android:nextFocusUp="@+id/btnMenu" />
+                android:nextFocusDown="@+id/chkVirtualizer"
+                android:nextFocusForward="@+id/chkVirtualizer"
+                android:nextFocusLeft="@+id/chkBass"
+                android:nextFocusRight="@+id/chkVirtualizer"
+                android:nextFocusUp="@+id/chkBass" />
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/chkVirtualizer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/barBass"
-                android:layout_centerHorizontal="true"
                 android:layout_marginBottom="16dp"
-                android:nextFocusDown="@+id/btnGoBack"
-                android:nextFocusForward="@+id/btnGoBack"
+                android:nextFocusDown="@+id/barVirtualizer"
+                android:nextFocusForward="@+id/barVirtualizer"
                 android:nextFocusLeft="@+id/barBass"
-                android:nextFocusRight="@+id/btnGoBack"
+                android:nextFocusRight="@+id/barVirtualizer"
                 android:nextFocusUp="@+id/barBass"
                 android:text="@string/virtualization" />
 
@@ -130,13 +124,32 @@
                 android:id="@+id/barVirtualizer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/chkVirtualizer"
-                android:nextFocusDown="@+id/btnChangeEffect"
-                android:nextFocusForward="@+id/btnChangeEffect"
-                android:nextFocusLeft="@+id/chkEnable"
-                android:nextFocusRight="@+id/btnChangeEffect"
-                android:nextFocusUp="@+id/btnMenu" />
-        </RelativeLayout>
+                android:layout_marginBottom="32dp"
+                android:nextFocusDown="@+id/chkReverb"
+                android:nextFocusForward="@+id/chkReverb"
+                android:nextFocusLeft="@+id/chkVirtualizer"
+                android:nextFocusRight="@+id/chkReverb"
+                android:nextFocusUp="@+id/chkVirtualizer" />
+
+            <br.com.carlosrafaelgn.fplay.ui.BgButton
+                android:id="@+id/chkReverb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:nextFocusDown="@+id/btnMenu"
+                android:nextFocusForward="@+id/btnGoBack"
+                android:nextFocusLeft="@+id/barVirtualizer"
+                android:nextFocusRight="@+id/btnGoBack"
+                android:nextFocusUp="@+id/barVirtualizer"
+                android:text="@string/reverb" />
+
+            <TextView
+                android:id="@+id/txtReverb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="@string/coming_soon" />
+        </LinearLayout>
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
