--- a/res/layout/activity_effects.xml
+++ b/res/layout/activity_effects.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:baselineAligned="false"
+    android:orientation="vertical"
     tools:context=".ActivityHost" >
 
     <RelativeLayout
         android:id="@+id/panelTop"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" >
+        android:layout_height="wrap_content" >
 
         <br.com.carlosrafaelgn.fplay.ui.BgButton
             android:id="@+id/btnGoBack"
@@ -18,10 +19,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:contentDescription="@string/go_back"
-            android:nextFocusDown="@+id/barBass"
-            android:nextFocusForward="@+id/chkEnable"
             android:nextFocusLeft="@+id/btnChangeEffect"
-            android:nextFocusRight="@+id/chkEnable"
             android:nextFocusUp="@+id/btnChangeEffect" >
 
             <requestFocus />
@@ -35,117 +33,135 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="8dp"
             android:contentDescription="@string/menu"
-            android:nextFocusDown="@+id/barBass"
-            android:nextFocusForward="@+id/barBass"
-            android:nextFocusLeft="@+id/chkEnable"
-            android:nextFocusRight="@+id/barBass"
+            android:nextFocusDown="@+id/chkEqualizer"
+            android:nextFocusForward="@+id/chkEqualizer"
+            android:nextFocusLeft="@+id/btnGoBack"
+            android:nextFocusRight="@+id/chkEqualizer"
             android:nextFocusUp="@+id/btnChangeEffect"
             android:visibility="gone" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/panelControls"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/panelTop" >
+        android:baselineAligned="false"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/panelEqualizer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/btnChangeEffect"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true" >
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:baselineAligned="false"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="gone" >
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/chkEqualizer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
                 android:layout_marginBottom="8dp"
-                android:nextFocusDown="@+id/btnGoBack"
-                android:nextFocusForward="@+id/btnGoBack"
-                android:nextFocusLeft="@+id/barBass"
-                android:nextFocusRight="@+id/btnGoBack"
-                android:nextFocusUp="@+id/barBass"
+                android:nextFocusLeft="@+id/btnMenu"
+                android:nextFocusUp="@+id/btnMenu"
                 android:text="@string/equalizer" />
-        </RelativeLayout>
+        </LinearLayout>
 
-        <RelativeLayout
+        <ScrollView
             android:id="@+id/panelSecondary"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:baselineAligned="false"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
             android:visibility="gone" >
 
-            <br.com.carlosrafaelgn.fplay.ui.BgButton
-                android:id="@+id/chkBass"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="8dp"
-                android:nextFocusDown="@+id/btnGoBack"
-                android:nextFocusForward="@+id/btnGoBack"
-                android:nextFocusLeft="@+id/barBass"
-                android:nextFocusRight="@+id/btnGoBack"
-                android:nextFocusUp="@+id/barBass"
-                android:text="@string/bass_boost" />
-
-            <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
-                android:id="@+id/barBass"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/chkBass"
-                android:layout_marginBottom="16dp"
-                android:nextFocusDown="@+id/btnChangeEffect"
-                android:nextFocusForward="@+id/btnChangeEffect"
-                android:nextFocusLeft="@+id/chkEnable"
-                android:nextFocusRight="@+id/btnChangeEffect"
-                android:nextFocusUp="@+id/btnMenu" />
+                android:baselineAligned="false"
+                android:gravity="center_horizontal"
+                android:orientation="vertical" >
 
-            <br.com.carlosrafaelgn.fplay.ui.BgButton
-                android:id="@+id/chkVirtualizer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/barBass"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="8dp"
-                android:nextFocusDown="@+id/btnGoBack"
-                android:nextFocusForward="@+id/btnGoBack"
-                android:nextFocusLeft="@+id/barBass"
-                android:nextFocusRight="@+id/btnGoBack"
-                android:nextFocusUp="@+id/barBass"
-                android:text="@string/virtualization" />
+                <br.com.carlosrafaelgn.fplay.ui.BgButton
+                    android:id="@+id/chkBass"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:nextFocusDown="@+id/barBass"
+                    android:nextFocusForward="@+id/barBass"
+                    android:nextFocusLeft="@+id/btnGoBack"
+                    android:nextFocusRight="@+id/barBass"
+                    android:nextFocusUp="@+id/btnGoBack"
+                    android:text="@string/bass_boost" />
 
-            <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
-                android:id="@+id/barVirtualizer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/chkVirtualizer"
-                android:nextFocusDown="@+id/btnChangeEffect"
-                android:nextFocusForward="@+id/btnChangeEffect"
-                android:nextFocusLeft="@+id/chkEnable"
-                android:nextFocusRight="@+id/btnChangeEffect"
-                android:nextFocusUp="@+id/btnMenu" />
-        </RelativeLayout>
+                <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
+                    android:id="@+id/barBass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:nextFocusDown="@+id/chkVirtualizer"
+                    android:nextFocusForward="@+id/chkVirtualizer"
+                    android:nextFocusLeft="@+id/chkBass"
+                    android:nextFocusRight="@+id/chkVirtualizer"
+                    android:nextFocusUp="@+id/chkBass" />
+
+                <br.com.carlosrafaelgn.fplay.ui.BgButton
+                    android:id="@+id/chkVirtualizer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:nextFocusDown="@+id/barVirtualizer"
+                    android:nextFocusForward="@+id/barVirtualizer"
+                    android:nextFocusLeft="@+id/barBass"
+                    android:nextFocusRight="@+id/barVirtualizer"
+                    android:nextFocusUp="@+id/barBass"
+                    android:text="@string/virtualization" />
+
+                <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
+                    android:id="@+id/barVirtualizer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:nextFocusDown="@+id/chkReverb"
+                    android:nextFocusForward="@+id/chkReverb"
+                    android:nextFocusLeft="@+id/chkVirtualizer"
+                    android:nextFocusRight="@+id/chkReverb"
+                    android:nextFocusUp="@+id/chkVirtualizer" />
+
+                <br.com.carlosrafaelgn.fplay.ui.BgButton
+                    android:id="@+id/chkReverb"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:nextFocusDown="@+id/btnChangeEffect"
+                    android:nextFocusForward="@+id/btnChangeEffect"
+                    android:nextFocusLeft="@+id/barVirtualizer"
+                    android:nextFocusRight="@+id/btnChangeEffect"
+                    android:nextFocusUp="@+id/barVirtualizer"
+                    android:text="@string/reverb" />
+
+                <TextView
+                    android:id="@+id/txtReverb"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/coming_soon" />
+            </LinearLayout>
+        </ScrollView>
 
         <br.com.carlosrafaelgn.fplay.ui.BgButton
             android:id="@+id/btnChangeEffect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
             android:nextFocusDown="@+id/btnGoBack"
             android:nextFocusForward="@+id/btnGoBack"
-            android:nextFocusLeft="@+id/barBass"
             android:nextFocusRight="@+id/btnGoBack"
-            android:nextFocusUp="@+id/barBass"
             android:text="@string/more_effects" />
-    </RelativeLayout>
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
