--- a/res/layout-sw600dp/activity_main_l.xml
+++ b/res/layout-sw600dp/activity_main_l.xml
@@ -74,22 +74,52 @@
                     android:singleLine="true"
                     android:text="@string/no_info" />
 
-                <TextView
-                    android:id="@+id/lblAlbumStatic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:singleLine="true"
-                    android:text="@string/album" />
-
-                <TextView
-                    android:id="@+id/lblAlbum"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="32dp"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:text="@string/no_info" />
+                    android:layout_marginBottom="32dp" >
+
+                    <TextView
+                        android:id="@+id/lblTrackStatic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginRight="16dp"
+                        android:singleLine="true"
+                        android:text="@string/track" />
+
+                    <TextView
+                        android:id="@+id/lblTrack"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignRight="@+id/lblTrackStatic"
+                        android:layout_below="@+id/lblTrackStatic"
+                        android:singleLine="true"
+                        android:text="@string/no_info" />
+
+                    <TextView
+                        android:id="@+id/lblAlbumStatic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginBottom="8dp"
+                        android:layout_toRightOf="@+id/lblTrackStatic"
+                        android:singleLine="true"
+                        android:text="@string/album" />
+
+                    <TextView
+                        android:id="@+id/lblAlbum"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/lblAlbumStatic"
+                        android:layout_toRightOf="@+id/lblTrackStatic"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:text="@string/no_info" />
+                </RelativeLayout>
 
                 <TextView
                     android:id="@+id/lblLengthStatic"
