--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -6,7 +6,7 @@
 		AppBaseTheme from BOTH res/values/styles.xml and res/values-v11/styles.xml 
 		on API 14+ devices.
     -->
-    <style name="AppBaseTheme" parent="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen">
+    <style name="AppBaseTheme" parent="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen">
         <!-- API 14 theme customizations can go here. -->
     </style>
 
