Improving the layout for some 7in tablets, trying to add immersive support for visualizations, made a few layout changes and implemented internal improvements

--- a/res/layout-sw500dp/activity_main_l.xml
+++ b/res/layout-sw500dp/activity_main_l.xml
@@ -97,6 +97,7 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignRight="@+id/lblTrackStatic"
                         android:layout_below="@+id/lblTrackStatic"
+                        android:gravity="center_horizontal"
                         android:singleLine="true"
                         android:text="@string/no_info" />
 
