--- a/res/xml/main_widget_info.xml
+++ b/res/xml/main_widget_info.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/main_widget"
-    android:initialLayout="@layout/main_widget"
+    android:initialKeyguardLayout="@layout/main_widget_transparent"
+    android:initialLayout="@layout/main_widget_transparent"
     android:minHeight="40dp"
     android:minWidth="250dp"
-    android:resizeMode="horizontal"
     android:previewImage="@drawable/ic_launcher"
+    android:resizeMode="horizontal"
     android:updatePeriodMillis="0"
     android:widgetCategory="home_screen|keyguard" />
